testing new macbook air, no changes

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</section>
 
 		<article class="stories" id="stories">
-			<!-- no idea how to arrange this shit -->
+			<!-- you'll get this -->
 		</article>
 	</main>
 
