--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Fredericka+the+Great&family=Roboto:wght@300&display=swap"
 		rel="stylesheet">
 	<link rel="stylesheet" href="./styles/styles.css">
+	<!-- linking with fontawesome -->
+	<script src="https://kit.fontawesome.com/4a6b8331d3.js" crossorigin="anonymous"></script>
 	<title>Animal Refuge</title>
 </head>
 <body>
@@ -32,27 +34,26 @@
 				</ul>
 			</nav>
 
-<!-- Remember to thank https://icons8.com -->
 			<div class="icons">
 				<ul>
 					<li>
-						<a href="https://instagram.com">
-							<img src="./animal-land-assets/icons8-instagram-24.png">
+						<a aria-label="To our Instagram profile" href="https://instagram.com">
+							<i aria-hidden="true" class="fa-brands fa-instagram"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://facebook.com">
-							<img src="./animal-land-assets/icons8-facebook-24.png">
+						<a aria-label="To our Facebook page" href="https://facebook.com">
+							<i aria-hidden="true" class="fa-brands fa-facebook-f"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://snapchat.com">
-							<img src="./animal-land-assets/icons8-snapchat-24.png">
+						<a aria-label="To our Snapchat page" href="https://snapchat.com">
+							<i aria-hidden="true" class="fa-brands fa-snapchat"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://twitter.com">
-							<img src="./animal-land-assets/icons8-twitter-24.png">
+						<a aria-label="To our Twitter page" href="https://twitter.com">
+							<i aria-hidden="true" class="fa-brands fa-twitter"></i>
 						</a>
 					</li>
 				</ul>
@@ -94,13 +95,16 @@
 			<div class="wrapper">
 				<ul>
 					<li>
-						<img src="https://img.logoipsum.com/274.svg">Animal Spotlight</img>
+						<a aria-label="To animal spotlight page" href="#">Animal Spotlight</a>
+						<i aria-hidden="true" class="fa-solid fa-paw"></i>
 					</li>
 					<li>
-						<img src="https://img.logoipsum.com/280.svg">Events</img>
+						<a aria-label="To events page" href="#">Events</a>
+						<i aria-hidden="true" class="fa-solid fa-calendar-check"></i>
 					</li>
 					<li>
-						<img src="https://img.logoipsum.com/277.svg">Mech</img>
+						<a aria-label="To merchandise page" href="#">Merch</a>
+						<i aria-hidden="true" class="fa-solid fa-bag-shopping"></i>
 					</li>
 				</ul>
 			</div>
