basic CSS styling applied

--- a/index.html
+++ b/index.html
@@ -14,26 +14,32 @@
 	<script src="https://kit.fontawesome.com/4a6b8331d3.js" crossorigin="anonymous"></script>
 	<title>Animal Refuge</title>
 </head>
+
 <body>
+	<!-- header -->
 	<header id="home">
 		<div class="wrapper">
 			<nav>
 				<ul>
 					<li>
-						<a href="#home">Home</a>
+						<a class="navLink" href="#home">Home</a>
 					</li>
 					<li>
-						<a href="#">About</a> <!-- no acceptable "about" section on this page -->
+						<a class="navLink" href="#">About</a> <!-- no acceptable "about" section on this page -->
 					</li>
 					<li>
-						<a href="#blog">Blog</a>
+						<a class="navLink" href="#blog">Blog</a>
 					</li>
 					<li>
-						<a href="#footer">Contact</a>
+						<a class="navLink" href="#footer">Contact</a>
 					</li>
 				</ul>
 			</nav>
 
+			<!-- h1 text -->
+			<h1>Animal Refuge</h1>
+
+			<!-- favicons for social media, via fontawesome -->
 			<div class="icons">
 				<ul>
 					<li>
@@ -58,11 +64,10 @@
 					</li>
 				</ul>
 			</div>
-
-			<h1>Animal Refuge</h1>
 		</div>
 	</header>
 
+	<!-- main -->
 	<main>
 		<section class="feature" id="feature">
 			<div class="wrapper">
@@ -77,6 +82,7 @@
 			</div>
 		</section>
 
+		<!-- gallery/friends section -->
 		<section class="gallery" id="gallery">
 			<div class="wrapper">
 				<h3>Some of our Friends</h3>
@@ -91,6 +97,7 @@
 			</div>
 		</section>
 
+		<!-- three links, favicons courtesy of fontawesome -->
 		<section class="links" id="links">
 			<div class="wrapper">
 				<ul>
@@ -110,6 +117,7 @@
 			</div>
 		</section>
 
+		<!-- blog section in two parts -->
 		<article class="blog" id="blog">
 			<!-- blog/read more section -->
 			<div class="topBox">
@@ -131,26 +139,31 @@
 			</div>
 		</article>
 	</main>
+	<!-- end of main -->
 
+	<!-- footer -->
 	<footer id="footer">
-		<div class="wrapper">
+		<div class="wrapper footerContainer">
+
+			<!-- nav links in footer -->
 			<div class="footerNav">
 				<ul>
 					<li>
-						<a href="#home">Home</a>
+						<a class="navLink" href="#home">Home</a>
 					</li>
 					<li>
-						<a href="#blog">Blog</a>
+						<a class="navLink" href="#blog">Blog</a>
 					</li>
 					<li>
-						<a href="#gallery">Gallery</a>
+						<a class="navLink" href="#gallery">Gallery</a>
 					</li>
 					<li>
-						<a href="#footer">Contact</a>
+						<a class="navLink" href="#footer">Contact</a>
 					</li>
 				</ul>
 			</div>
 
+			<!-- newsletter signup form -->
 			<div class="newsletterForm">
 				<h5>Stay Updated</h5>
 				<p>Subscribe to our newsletter to stay updated.</p>
@@ -161,6 +174,7 @@
 				</form>
 			</div>
 
+			<!-- contact information -->
 			<div class="contact">
 				<h5>Contact</h5>
 				<p>info@email.com | 123 - 456 - 7890</p>
@@ -169,6 +183,7 @@
 			</div>
 		</div>
 
+		<!-- copyright information -->
 		<p class="copyright">Copyright © 2022 Juno College</p>
 	</footer>
 </body>
