--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<header id="home">
 		<div class="wrapper">
 			<nav>
-				<ul>
+				<ul class="upperNav">
 					<li>
 						<a class="navLink" href="#home">Home</a>
 					</li>
@@ -40,8 +40,8 @@
 			<h1>Animal Refuge</h1>
 
 			<!-- favicons for social media, via fontawesome -->
-			<div class="icons">
-				<ul>
+			<div>
+				<ul class="icons">
 					<li>
 						<a aria-label="To our Instagram profile" href="https://instagram.com">
 							<i aria-hidden="true" class="fa-brands fa-instagram"></i>
@@ -72,7 +72,7 @@
 		<section class="feature" id="feature">
 			<div class="wrapper">
 				<div class="imageContainer">
-					<img src="./animal-land-assets/image-6.jpg" alt="orange and black striped housecat with big green eyes lounging on red fabric looking at camera">
+					<img src="./animal-land-assets/image-6.jpg" alt="orange and black striped bengal cat with big green eyes lounging on red fabric">
 				</div>
 				<div class="textContainer">
 					<h2>Suzie's Story</h2>
