--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
 	<!-- main -->
 	<main>
-		<section class="feature" id="feature">
-			<div class="wrapper">
+		<section id="feature">
+			<div class="wrapper feature">
 				<div class="imageContainer">
 					<img src="./animal-land-assets/image-6.jpg" alt="orange and black striped bengal cat with big green eyes lounging on red fabric">
 				</div>
