flexbox will be the death of me

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 
 	<!-- main -->
 	<main>
-		<section id="feature">
-			<div class="wrapper feature">
+		<section class="feature" id="feature">
+			<div class="wrapper ">
 				<div class="imageContainer">
 					<img src="./animal-land-assets/image-6.jpg" alt="orange and black striped bengal cat with big green eyes lounging on red fabric">
 				</div>
 				<div class="textContainer">
 					<h2>Suzie's Story</h2>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus modi tenetur, rerum illum voluptatem quis veniam ipsam voluptatum sunt sit, quia accusamus ex facilis nulla explicabo omnis molestiae commodi provident harum quaerat cumque repudiandae iste! Atque omnis, accusantium eos exercitationem consequuntur mollitia perferendis eum, iste expedita illum autem necessitatibus ex optio impedit sed magni repellat maxime possimus. Doloremque, quasi? Dolores.</p>
+					<a class="readMore readMoreOne" href="#">Read More</a>
 				</div>
-				<a class="readMore readMoreOne" href="#">Read More</a>
 			</div>
 		</section>
 
@@ -86,7 +86,7 @@
 		<section class="gallery" id="gallery">
 			<div class="wrapper">
 				<h3>Some of our Friends</h3>
-				<ul>
+				<ul class="galleryFlex">
 					<li>
 						<img src="./animal-land-assets/image-5.jpg" alt="a bright green lizard sitting on a branch"></li>
 					<li>
@@ -100,7 +100,7 @@
 		<!-- three links, favicons courtesy of fontawesome -->
 		<section class="links" id="links">
 			<div class="wrapper">
-				<ul>
+				<ul class="linksFlex" >
 					<li>
 						<a aria-label="To animal spotlight page" href="#">Animal Spotlight</a>
 						<i aria-hidden="true" class="fa-solid fa-paw"></i>
