blog section mostly done

--- a/index.html
+++ b/index.html
@@ -102,35 +102,46 @@
 			<div class="wrapper">
 				<ul class="linksFlex" >
 					<li>
+						<a href="#">
+							<i aria-hidden="true" class="fa-solid fa-paw fa-3x" ></i>
+						</a>
 						<a aria-label="To animal spotlight page" href="#">Animal Spotlight</a>
-						<i aria-hidden="true" class="fa-solid fa-paw"></i>
 					</li>
 					<li>
+						<a href="#">
+							<i aria-hidden="true" class="fa-solid fa-calendar-check fa-3x"></i>
+						</a>
 						<a aria-label="To events page" href="#">Events</a>
-						<i aria-hidden="true" class="fa-solid fa-calendar-check"></i>
 					</li>
 					<li>
+						<a href="#">
+							<i aria-hidden="true" class="fa-solid fa-bag-shopping fa-3x"></i>
+						</a>
 						<a aria-label="To merchandise page" href="#">Merch</a>
-						<i aria-hidden="true" class="fa-solid fa-bag-shopping"></i>
 					</li>
 				</ul>
 			</div>
 		</section>
 
 		<!-- blog section in two parts -->
-		<article class="blog" id="blog">
+		<article class="blog grid2x2" id="blog">
 			<!-- blog/read more section -->
-			<div class="topBox">
-				<img src="./animal-land-assets/image-7.jpg" alt="two zebras surround bo lush green jungle">
+			<div class="box box1">
 				<div class="storyBox">
 					<h4>Fascinating Facts about Zebras</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sint possimus deleniti architecto provident voluptatem quaerat molestias, est quae alias soluta, sit qui vel? Expedita officiis laborum est nihil.</p>
 					<a class="readMore readMoreTwo" href="#">Read More</a>
 				</div>
 			</div>
+			
+			<div class="box box2"><img src="./animal-land-assets/image-7.jpg" alt="two zebras surround bo lush green jungle">
+			</div>
 
-			<div class="btmBox">
+			<div class="box box3">
 				<img src="./animal-land-assets/image-2.jpg" alt="closeup of grey housecat putting its paw into a woman's hand">
+			</div>
+
+			<div class="box box4">
 				<div class="storyBox">
 					<h4>The Bond Between Animals and Humans</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla voluptatum, doloribus quae tempore nam quisquam at corrupti accusamus, culpa mollitia et ullam? Quidem itaque perferendis fugiat placeat reiciendis quos a.</p>
