tidied up footer a bit

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<a class="readMore readMoreTwo" href="#">Read More</a>
 				</div>
 			</div>
-			
+
 			<div class="box box2"><img src="./animal-land-assets/image-7.jpg" alt="two zebras surround bo lush green jungle">
 			</div>
 
@@ -178,10 +178,10 @@
 			<div class="newsletterForm">
 				<h5>Stay Updated</h5>
 				<p>Subscribe to our newsletter to stay updated.</p>
-				<form action="#">
+				<form action="#" method="#" name="emailForm">
 					<label for="emailAddress"></label>
 					<input type="text" id="emailAddress" name="emailAddress" placeholder="email address">
-					<input type="submit" value="Subscribe">
+					<button type="submit" value="subscribe">subscribe</button>
 				</form>
 			</div>
 
