fixing buttons and adding focus hover effects

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 				<ul class="icons">
 					<li>
 						<a aria-label="To our Instagram profile" href="https://instagram.com">
-							<i aria-hidden="true" class="fa-brands fa-instagram"></i>
+							<i aria-hidden="true" class="fa-brands fa-instagram fa-2x"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Facebook page" href="https://facebook.com">
-							<i aria-hidden="true" class="fa-brands fa-facebook-f"></i>
+							<i aria-hidden="true" class="fa-brands fa-facebook-f fa-2x"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Snapchat page" href="https://snapchat.com">
-							<i aria-hidden="true" class="fa-brands fa-snapchat"></i>
+							<i aria-hidden="true" class="fa-brands fa-snapchat fa-2x"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Twitter page" href="https://twitter.com">
-							<i aria-hidden="true" class="fa-brands fa-twitter"></i>
+							<i aria-hidden="true" class="fa-brands fa-twitter fa-2x"></i>
 						</a>
 					</li>
 				</ul>
@@ -157,22 +157,24 @@
 		<div class="wrapper footerContainer">
 
 			<!-- nav links in footer -->
-			<div class="footerNav">
-				<ul>
-					<li>
-						<a class="navLink" href="#home">Home</a>
-					</li>
-					<li>
-						<a class="navLink" href="#blog">Blog</a>
-					</li>
-					<li>
-						<a class="navLink" href="#gallery">Gallery</a>
-					</li>
-					<li>
-						<a class="navLink" href="#footer">Contact</a>
-					</li>
-				</ul>
-			</div>
+			<nav>
+				<div class="footerNav">
+					<ul>
+						<li>
+							<a class="navLink" href="#home">Home</a>
+						</li>
+						<li>
+							<a class="navLink" href="#blog">Blog</a>
+						</li>
+						<li>
+							<a class="navLink" href="#gallery">Gallery</a>
+						</li>
+						<li>
+							<a class="navLink" href="#footer">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 
 			<!-- newsletter signup form -->
 			<div class="newsletterForm">
