fixing footer still

--- a/index.html
+++ b/index.html
@@ -154,45 +154,47 @@
 
 	<!-- footer -->
 	<footer id="footer">
-		<div class="wrapper footerContainer">
+		<div class="wrapper">
+			<div class="footerContainer">
 
-			<!-- nav links in footer -->
-			<nav>
-				<div class="footerNav">
-					<ul>
-						<li>
-							<a class="navLink" href="#home">Home</a>
-						</li>
-						<li>
-							<a class="navLink" href="#blog">Blog</a>
-						</li>
-						<li>
-							<a class="navLink" href="#gallery">Gallery</a>
-						</li>
-						<li>
-							<a class="navLink" href="#footer">Contact</a>
-						</li>
-					</ul>
+				<!-- nav links in footer -->
+				<nav>
+					<div class="footerNav">
+						<ul>
+							<li>
+								<a class="navLink" href="#home">Home</a>
+							</li>
+							<li>
+								<a class="navLink" href="#blog">Blog</a>
+							</li>
+							<li>
+								<a class="navLink" href="#gallery">Gallery</a>
+							</li>
+							<li>
+								<a class="navLink" href="#footer">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+
+				<!-- newsletter signup form -->
+				<div class="newsletterForm">
+					<h5>Stay Updated</h5>
+					<p>Subscribe to our newsletter to stay updated.</p>
+					<form action="#" method="#" name="emailForm">
+						<label for="emailAddress"></label>
+						<input type="text" id="emailAddress" name="emailAddress" placeholder="email address">
+						<button type="submit" value="subscribe">subscribe</button>
+					</form>
 				</div>
-			</nav>
 
-			<!-- newsletter signup form -->
-			<div class="newsletterForm">
-				<h5>Stay Updated</h5>
-				<p>Subscribe to our newsletter to stay updated.</p>
-				<form action="#" method="#" name="emailForm">
-					<label for="emailAddress"></label>
-					<input type="text" id="emailAddress" name="emailAddress" placeholder="email address">
-					<button type="submit" value="subscribe">subscribe</button>
-				</form>
-			</div>
-
-			<!-- contact information -->
-			<div class="contact">
-				<h5>Contact</h5>
-				<p>info@email.com | 123 - 456 - 7890</p>
-				<p>123 some road, Toronto, ON</p>
-				<p>A5A 5A5, Canada</p>
+				<!-- contact information -->
+				<div class="contact">
+					<h5>Contact</h5>
+					<p>info@email.com | 123 - 456 - 7890</p>
+					<p>123 some road, Toronto, ON</p>
+					<p>A5A 5A5, Canada</p>
+				</div>
 			</div>
 		</div>
 
