lots of tweaks but media queries are next

--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 					</form>
 				</div>
 
-				<!-- contact information -->
+				<!-- contact information, email and postal address clickable -->
 				<div class="contact">
 					<h5>Contact</h5>
-					<p>info@email.com | 123 - 456 - 7890</p>
-					<p>123 some road, Toronto, ON</p>
-					<p>A5A 5A5, Canada</p>
+					<p><span><a class="address" href="mailto:info@gmail.com">info@email.com </a></span> | 123 - 456 - 7890</p>
+					<p><a class="address" href="https://www.google.com/maps/search/123+some+road,+Toronto,+ON++A5A+5A5,+Canada/@43.6691983,-79.5232972,11z/data=!3m1!4b1">123 some road, Toronto, ON</a></p>
+					<p><a class="address" href="https://www.google.com/maps/search/123+some+road,+Toronto,+ON++A5A+5A5,+Canada/@43.6691983,-79.5232972,11z/data=!3m1!4b1">A5A 5A5, Canada</a></p>
 				</div>
 			</div>
 		</div>
