working on media queries and I welcome death at this point

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 				<ul class="icons">
 					<li>
 						<a aria-label="To our Instagram profile" href="https://instagram.com">
-							<i aria-hidden="true" class="fa-brands fa-instagram fa-2x"></i>
+							<i aria-hidden="true" class="fa-brands fa-instagram fa-xl"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Facebook page" href="https://facebook.com">
-							<i aria-hidden="true" class="fa-brands fa-facebook-f fa-2x"></i>
+							<i aria-hidden="true" class="fa-brands fa-facebook-f fa-xl"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Snapchat page" href="https://snapchat.com">
-							<i aria-hidden="true" class="fa-brands fa-snapchat fa-2x"></i>
+							<i aria-hidden="true" class="fa-brands fa-snapchat fa-xl"></i>
 						</a>
 					</li>
 					<li>
 						<a aria-label="To our Twitter page" href="https://twitter.com">
-							<i aria-hidden="true" class="fa-brands fa-twitter fa-2x"></i>
+							<i aria-hidden="true" class="fa-brands fa-twitter fa-xl"></i>
 						</a>
 					</li>
 				</ul>
