footer is still a mess but the rest is pretty okay

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a class="navLink" href="#home">Home</a>
 					</li>
 					<li>
-						<a class="navLink" href="#">About</a> <!-- no acceptable "about" section on this page -->
+						<a class="navLink" href="#">About</a> <!-- no acceptable "about" section on this page to link to-->
 					</li>
 					<li>
 						<a class="navLink" href="#blog">Blog</a>
@@ -39,7 +39,7 @@
 			<!-- h1 text -->
 			<h1>Animal Refuge</h1>
 
-			<!-- favicons for social media, via fontawesome -->
+			<!-- favicons for social media, via fontawesome. Clickable to generic homepages. -->
 			<div>
 				<ul class="icons">
 					<li>
@@ -67,7 +67,7 @@
 		</div>
 	</header>
 
-	<!-- main -->
+	<!-- main/feature section -->
 	<main>
 		<section class="feature" id="feature">
 			<div class="wrapper ">
@@ -123,7 +123,7 @@
 			</div>
 		</section>
 
-		<!-- blog section in two parts -->
+		<!-- blog section in two parts, 2x each story boxes and images boxes -->
 		<article class="blog grid2x2" id="blog">
 			<!-- blog/read more section -->
 			<div class="box box1">
@@ -134,7 +134,8 @@
 				</div>
 			</div>
 
-			<div class="box box2"><img src="./animal-land-assets/image-7.jpg" alt="two zebras surround bo lush green jungle">
+			<div class="box box2">
+				<img src="./animal-land-assets/image-7.jpg" alt="two zebras surround bo lush green jungle">
 			</div>
 
 			<div class="box box3">
